# HiQsimulator

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.rst  __init__.py  _cppsim_mpi.cpp  _cppstabsim.cpp  _sched_cpp.cpp  _version.py  contributors.md  cppsim-mpi.cpp  himembind.cpp  opyt-mpi.cpp  opyt.cpp  qswap-mpi.cpp  qswap.cpp  readthedocs.yml  requirements.txt  setup.py  socket-test.cpp
.github/ISSUE_TEMPLATE/: general-bug-report.md  installation-issues.md
cmake/: ClangFormat.cmake  FindNOpenMP.cmake  FindSphinx.cmake  Findgflags.cmake  Findglog.cmake  Findhwloc.cmake  Findxsimd.cmake  macros.cmake  options.cmake  packages.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.bak  Doxyfile.in  Makefile  README.rst  conf.py  environment.yml  hiq.projectq.backends.rst  hiq.projectq.cengines.rst  hiq.rst  index.html.in  index.rst  make.bat  quantumcomputing.rst  requirements_docs.txt  requirements_rtd.txt  tutorials.rst
docs/examples/: examples.Bernstein-VaziraniAlgorithm.rst  examples.GroverAlgorithm.rst  examples.Intro_Maximum_Search.rst  examples.Introduction_to_phase_estimation.rst  examples.ShorAlgorithm.rst
docs/source/: conf.py  examples.rst  index.rst  installation.rst  quantumcomputing.rst
docs/source/api/: cluster_scheduler.rst  cxx.rst  hiq.projectq.backends.rst  hiq.projectq.cengines.rst  hiq_scheduler.rst  python.rst  simulator_mpi.rst  simulator_mpi_class.rst  stabilizer_simulator.rst  swap_scheduler.rst  xsimd_fallback.rst  xsimd_fallback_batch.rst  xsimd_fallback_details.rst  xsimd_fallback_expressions.rst  xsimd_fallback_functions.rst  xsimd_fallback_misc.rst
docs/source/examples/: examples.GroverAlgorithm.rst  examples.HHLAlgorithm.rst  examples.Intro_Maximum_Search.rst
docs/source/tutorials/: tutorials.backends.rst  tutorials.cloud.rst  tutorials.local.rst
docs/tutorials/: tutorials.backends.rst  tutorials.cloud.rst  tutorials.local.rst
examples/: BV_algorithm_constant_mpi.py  SymMatrixSolver_mpi.py  ToeplitzSimplify_constant.py  exactgrover_mpi.py  grover_mpi.py  maximum_search_constant_mpi.py  phase_estimation_mpi.py  qecc9_sta.py  shor_mpi.py  teleport_mpi.py  unknown_num_search_constant_mpi.py
hiq/: __init__.py
hiq/projectq/backends/: __init__.py
hiq/projectq/backends/_sim/: __init__.py  _simulator_mpi.py  _simulator_mpi_test.py  _stabilizer_simulator.py  _stabilizer_simulator_test.py
hiq/projectq/cengines/: __init__.py  _dummybackend.py  _greedyscheduler.py  _hiq_main_engine.py
hiq/projectq/ops/: __init__.py  _gates.py
src/: CMakeLists.txt  xsimd_include.hpp
src/details/: scope_guard.hpp
src/scheduler/: cluster_scheduler.cpp  cluster_scheduler.h  convertors.cpp  convertors.h  definitions.h  swap_scheduler.cpp  swap_scheduler.h
src/simulator-mpi/: SimulatorMPI.cpp  SimulatorMPI.hpp  SwapArrays.hpp  SwapperMT.cpp  SwapperMT.hpp  alignedallocator.hpp  funcs.cpp  funcs.hpp  fusion_mpi.hpp  mpi_ext.hpp  swapping.hpp
src/simulator-mpi/kernels/intrin/: cintrin.hpp  kernel1.hpp  kernel2.hpp  kernel3.hpp  kernel4.hpp  kernel4_cf.hpp  kernel5.hpp  kernels.hpp  kernels_diag.hpp
src/simulator-mpi/kernels/intrin_cf/: kernel1.hpp  kernel2.hpp  kernel3.hpp  kernel4.hpp  kernel5.hpp  kernels.hpp
src/simulator-mpi/kernels/nointrin/: kernel1.hpp  kernel2.hpp  kernel3.hpp  kernel4.hpp  kernel5.hpp  kernels.hpp  kernels_diag.hpp
src/stabilizer-simulator/: StabilizerSimulator.hpp
src/stabilizer-simulator/details/: helper_functions.hpp  popcnt32.hpp
src/test/: CMakeLists.txt  stabilizer_simulator_test.cpp  xsimd_fallback_test.cpp
src/xsimd_fallback/: xsimd_fallback.hpp  xsimd_fallback_batch_impl.hpp  xsimd_fallback_details.hpp  xsimd_fallback_instruction_set.hpp
